# xarray-sweep

./: .gitignore  README.md  pyproject.toml  temp.ipynb
.github/workflows/: ci.yml
docs/: publishing.md
examples/: basic_usage.py
src/xarray_sweep/: __init__.py  core.py
tests/: test_grid_search.py  test_xarray_sweep.py
